Updated to version 1.10. Fixed test_package. Simpler now.

--- a/test_package/CMakeLists.txt
+++ b/test_package/CMakeLists.txt
@@ -4,5 +4,5 @@ cmake_minimum_required(VERSION 2.8.12)
 include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
 conan_basic_setup()
 
-ADD_EXECUTABLE(filterkey filterkey.cpp)
-TARGET_LINK_LIBRARIES(filterkey ${CONAN_LIBS})
+ADD_EXECUTABLE(simplejsontest simplejsontest.cpp)
+TARGET_LINK_LIBRARIES(simplejsontest ${CONAN_LIBS})
